@@ -1,3 +1,4 @@
+* Handle displayname on webdav.collection
 * Handle current-user-privilege-set on webdav.collection
 
 Version 1.4.0 - 2009-10-19
